# matrix-simple

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  emu.cpp  matrix-simple.pro  source.cpp  testsource.cpp
animsource/: AnimSource.pro  Makefile  animfactory.cpp  animfactory.h  animsender.cpp  animsender.h  animsource.pro  chessanim.cpp  chessanim.h  main.cpp  mainwindow.cpp  mainwindow.h  solidanim.cpp  solidanim.h  verticalanim.cpp  verticalanim.h
colorsource/: ColorSource.pro  Makefile  colorsender.cpp  colorsender.h  colorsource.pro  mainwindow.cpp  mainwindow.h  timer.cpp
common/: array2D.hpp  color.h  frame.h  serialization.cpp
drawsource/: DrawSource.pro  Makefile  drawsender.cpp  drawsender.h  drawsource.pro  griddrawer.cpp  griddrawer.h  mainwindow.cpp  mainwindow.h  timer.cpp  timer.h
emu/: Emu.pro  Makefile  README.md  emu.pro  frameprocessor.cpp  frameprocessor.h  griddrawer.cpp  griddrawer.h  mainwindow.cpp  mainwindow.h  resource.qrc  schviewcoords.txt
matrixsource/: CMakeLists.txt  Makefile  MatrixSource.pro  matrixsource.pro  sw-matrixsource.pro
matrixsource/deprecated/: Makefile
matrixsource/fmod/lowlevel/lib/arm/: libfmod.so.6.10  libfmodL.so.6.10
matrixsource/fmod/lowlevel/lib/armhf/: libfmod.so.6  libfmod.so.6.10  libfmodL.so.6.10
matrixsource/fmod/lowlevel/lib/x86/: libfmod.so.6.10  libfmodL.so.6.10
matrixsource/fmod/lowlevel/lib/x86_64/: libfmod.so.6.10  libfmodL.so.6.10
matrixsource/src/: MatrixAudioPlayer.cpp  MatrixAudioPlayer.h  MatrixPlayer.cpp  MatrixPlayer.h  MatrixPlayerWindow.cpp  MatrixPlayerWindow.h  MatrixPlayerWindow.ui  MatrixVideoPlayer.cpp  MatrixVideoPlayer.h  PlayerFrame.cpp  PlayerFrame.h  Q4XLoader.cpp  Q4XLoader.h  main.cpp
mueb/: Makefile  ipaddress.h  mueb.pro  muebreceiver.cpp  muebreceiver.h  muebtransmitter.cpp  muebtransmitter.h  udpsocket.cpp  udpsocket.h  udpsocket_linux.cpp  udpsocket_linux.h
percentsource/: CMakeLists.txt  Makefile  PercentSource  PercentSource.pro  digits.h  mainwindow.cpp  mainwindow.h  percentsender.cpp  percentsender.h  percentsource.pro
percentsource/src/: digits.h  main.cpp  mainwindow.cpp  mainwindow.h  percentsender.cpp  percentsender.h
windowtestsource/: CMakeLists.txt  Makefile  WindowTestSource.pro  mainwindow.cpp  mainwindow.h  windowtestsender.cpp  windowtestsender.h  windowtestsource.pro
windowtestsource/src/: mainwindow.cpp  mainwindow.h  windowtestsender.cpp  windowtestsender.h
